# GitHubActivityCLI

./: README.md  pyproject.toml
src/github_activity/: cli.py  event_parser.py  github_activity.py
